corpus/c/macro_include/case-10/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [macro_include] error surfaced through macro/include context @ src/main.c:3:40
help: inspect the user-owned macro invocation or include edge that reaches the failing line
from: invocation of 'READ_FIELD' @ src/main.c:3:40
| src/main.c:3:40
| int main(void) { Box box = {1}; return READ_FIELD(box); }
|                                        ^
debug: rule_id=rule.family.macro_include.structured_or_message
debug: matched_conditions=context=macro_expansion
other errors:
  - src/main.c:1:33: error: error surfaced through macro/include context
details: --formed-explain | raw: --formed-raw